<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?android:attr/windowBackground"
	tools:context="com.leon.creatingaquizappinandroid.MainActivity">
	
	
	
	
	<TextView
		android:id="@+id/correct"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:textSize="18sp"
		android:text="@string/correct_answer"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/incorrect"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:textSize="18sp"
		android:layout_marginTop="8dp"
		android:text="@string/incorrect_answer"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.9"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />
	
	<TextView
		android:id="@+id/label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="24dp"
		android:text="@string/label"
		android:textSize="25sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/correct" />
	
	<RadioGroup
		android:id="@+id/radio_group"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintBottom_toTopOf="@+id/submit"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/label">
		
		<android.support.v7.widget.AppCompatRadioButton
			android:id="@+id/first"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/first" />
		
		<android.support.v7.widget.AppCompatRadioButton
			android:id="@+id/second"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/second" />
		
		<android.support.v7.widget.AppCompatRadioButton
			android:id="@+id/third"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/third" />
	
	
	</RadioGroup>
	
	<android.support.v7.widget.AppCompatButton
		android:id="@+id/submit"
		style="@style/Widget.AppCompat.Button.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="16dp"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:text="@string/submit"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
